[gd_scene load_steps=3 format=3 uid="uid://24rgbt5r16ye"]

[ext_resource type="Script" uid="uid://b3utanryomjj8" path="res://pause_menu.gd" id="1_hdmo1"]
[ext_resource type="Theme" uid="uid://cp7oojxyjnbs7" path="res://ui/themes/buttons_theme.tres" id="2_nwcfo"]

[node name="Pause_Menu" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdmo1")

[node name="Paused_Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -28.5
offset_right = 28.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Center_Screen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons_Container" type="VBoxContainer" parent="Center_Screen"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_nwcfo")

[node name="Button_Resume" type="Button" parent="Center_Screen/Buttons_Container"]
layout_mode = 2
text = "Resume"

[node name="Button_Main_Menu" type="Button" parent="Center_Screen/Buttons_Container"]
layout_mode = 2
text = "Quit to Menu"

[node name="Button_Quit" type="Button" parent="Center_Screen/Buttons_Container"]
layout_mode = 2
text = "Quit to Desktop"

[node name="Sensitivity_Container" type="Control" parent="Center_Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 500.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sensitivity_Slider" type="VSlider" parent="Center_Screen/Sensitivity_Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -256.0
offset_right = 32.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.05
max_value = 10.0
step = 0.01
value = 1.0

[node name="Sensitivity_Input" type="SpinBox" parent="Center_Screen/Sensitivity_Container/Sensitivity_Slider"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -55.0
offset_right = 82.0
offset_bottom = -2.0
grow_horizontal = 2
theme = ExtResource("2_nwcfo")
min_value = 0.05
max_value = 10.0
step = 0.01
value = 1.0
alignment = 1
custom_arrow_step = 0.05

[node name="Sensitivity_Text_Label" type="Label" parent="Center_Screen/Sensitivity_Container/Sensitivity_Slider/Sensitivity_Input"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.0
offset_top = -50.0
offset_right = 70.0
offset_bottom = -8.0
grow_horizontal = 2
theme = ExtResource("2_nwcfo")
text = "Sensitivity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Haze" type="ColorRect" parent="."]
z_index = -4096
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.196078)

[connection signal="pressed" from="Center_Screen/Buttons_Container/Button_Resume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="Center_Screen/Buttons_Container/Button_Main_Menu" to="." method="_on_button_main_menu_pressed"]
[connection signal="pressed" from="Center_Screen/Buttons_Container/Button_Quit" to="." method="_on_button_quit_pressed"]
[connection signal="value_changed" from="Center_Screen/Sensitivity_Container/Sensitivity_Slider" to="." method="_on_sensitivity_slider_value_changed"]
[connection signal="value_changed" from="Center_Screen/Sensitivity_Container/Sensitivity_Slider/Sensitivity_Input" to="." method="_on_sensitivity_input_value_changed"]
